Fix inline overflow with settings links

--- a/lib-less/_helpers.less
+++ b/lib-less/_helpers.less
@@ -542,6 +542,7 @@
 
 .esper-subheader-link {
   padding: 0 @padding-base-horizontal;
+  display: inline-block;
   cursor: pointer;
   color: @brand-text-header;
   text-transform: uppercase;
